Embree does not like Bevel shader #73064

Closed
opened 2020-01-12 16:15:58 +01:00 by brothermechanic · 5 comments

System Information
Operating system: Gentoo OS
Graphics card: GTX 1060

Blender Version
Broken: (example: 2.83 git

Short description of error
Try to run render on my test scene
embree.blend
And then turn off embree and render will done fine.
Exact steps for others to reproduce the error
Blender crashed if i use bevel shader on my model with embree render option on
I test Embree + bevel shader on default cube - all fine
This happends only with my door model

**System Information** Operating system: Gentoo OS Graphics card: GTX 1060 **Blender Version** Broken: (example: 2.83 git **Short description of error** Try to run render on my test scene [embree.blend](https://archive.blender.org/developer/F8272993/embree.blend) And then turn off embree and render will done fine. **Exact steps for others to reproduce the error** Blender crashed if i use bevel shader on my model with embree render option on I test Embree + bevel shader on default cube - all fine This happends only with my door model

Added subscriber: @brothermechanic

Added subscriber: @brothermechanic
Stefan Werner self-assigned this 2020-01-14 15:01:23 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@4d28fc9c90

This issue was referenced by blender/cycles@4d28fc9c90314b48fa93038312a950b18f710ae0

This issue was referenced by 6257cdc376

This issue was referenced by 6257cdc376af02e93b61073b67ffc0514f8af4ac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73064
No description provided.